# nonebot-plugin-bfvservermap

./: LICENSE  README.md  pyproject.toml
nonebot-plugin-bfvservermap/: .pdm-python  __init__.py  pyproject.toml
nonebot-plugin-bfvservermap/nonebot-plugin-bfvservermap/: README.md
nonebot_plugin_bfvservermap/: __init__.py  server_template.html
