[project]
name = "nonebot-plugin-bfvservermap"
version = "0.1.4"
authors = [
    {name = "llbuxudong", email="3513392931@qq.com"},
]
description = "A onebot plugin for querying bfv server maps"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/LLbuxudong/nonebot-plugin-bfvservermap"
Issues = "https://github.com/LLbuxudong/nonebot-plugin-bfvservermap/issues"